# Project-Mahiru-Amane

./: .gitignore  README.md  generate_ppt.py  hack-pitchdeck.pptx  progress_report.md  render.yaml  test_ws.py  test_ws2.py  ~$ogress_report.md
.agents/: AGENTS.md
.claude/: settings.json
backend/: .env.example  Dockerfile  agents.py  database.py  embed_knowledge.py  hr_knowledge_base.json  local_mcp_server.py  main.py  mcp_client.py  pyproject.toml  pyright_errors.txt  pyrightconfig.json  requirements.txt  run_keploy.sh  schema.sql  start.sh  test_alchemyst.py  test_gnani.py  test_mcp.py  test_tts.py  test_tts2.py  test_ws.py  voice.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/components/ui/: CardSpotlight.tsx  HoverBorderGradient.tsx  MeteorEffect.tsx  TextGenerateEffect.tsx
frontend/src/lib/: supabase.ts
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  manifest.json
graphify-out/2026-07-17/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md
graphify-out/cache/: stat-index.json
