[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.7",
    "langchain-google-genai>=2.0.4",
    "langchain-groq>=0.2.1",
    "langchain-community>=0.3.7",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.139.0",
    "groq",
    "mcp>=1.28.1",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
